fix bug on ie11

--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
 	&__content {
-		min-height: 125px;
+		height: 125px;
 		display: flex;
 		align-items: center;
 		@include _576 {
